Completed fixing the three indactor buttons under the carousel so they do not overlap the footer

--- a/styles/details.css
+++ b/styles/details.css
@@ -84,6 +84,10 @@
     width: 100%;
 }
 
+.carousel-indicators {
+    z-index: 10;
+}
+
 .all-images {
     margin-left: auto;
     margin-right: auto;
